--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,3 +24,11 @@ bind - split-window -v
 
 #utilisation de la souris pour changer de terminal et de panel
 set -g mouse on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
