--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,7 @@
 # Set true color
-set-option -sa terminal-overrides ",xterm*:Tc"
+# set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -g default-terminal 'screen-254color'
+set-option -g terminal-overrides ',xterm-256color:RGB'
 
 # Enable mouse support
 set -g mouse on
@@ -16,6 +18,12 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+set -g detach-on-destroy off     # don't exit from tmux when closing a session
+set -g escape-time 0             # zero-out escape time delay
+set -g history-limit 1000000     # increase history size (from 2,000)
+set -g set-clipboard on          # use system clipboard
+setw -g mode-keys vi
+
 
 # Open panes in cwd
 bind '"' split-window -v -c "#{pane_current_path}"
@@ -24,9 +32,34 @@ bind % split-window -h -c "#{pane_current_path}"
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux'
+
+# Continuum and resurrect cfg
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
+
+# catppuccin cfg
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
+set -g @catppuccin_status_modules_right "directory meetings date_time"
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{b:pane_current_path}"
+set -g @catppuccin_date_time_text "%H:%M"
 
 run '~/.tmux/plugins/tpm/tpm'
 bind C-l send-keys 'C-l'
