--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,5 @@
 # Set true color
-# set-option -sa terminal-overrides ",xterm*:Tc"
-set-option -g default-terminal 'screen-254color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Enable mouse support
 set -g mouse on
@@ -53,9 +51,9 @@ set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
 set -g @catppuccin_status_modules_right "directory meetings date_time"
 set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_directory_text "#{b:pane_current_path}"
