Update alacritty cfg

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["~/.config/alacritty/catppuccin-mocha.toml"]
 
 [bell]
 animation = "EaseOutExpo"
@@ -48,7 +47,7 @@ multiplier = 3
 [selection]
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 
-[shell]
+[terminal.shell]
 args = ["--login"]
 program = "/opt/homebrew/bin/zsh"
 
@@ -65,3 +64,8 @@ lines = 80
 [window.padding]
 x = 20
 y = 20
+
+[general]
+import = ["~/.config/alacritty/catppuccin-mocha.toml"]
+
+[terminal]
