Update default tmux shell to zsh

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -15,6 +15,7 @@ bind C-Space send-prefix
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
+set-option -g default-shell $SHELL
 set-option -g renumber-windows on
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
 set -g escape-time 0             # zero-out escape time delay
